docs: rewrite README to cover the full advanced RAG + AI chat stack
The README was last updated for the Java 26 alignment commit and
predated four major subsystems (embeddings, nl2sql, router, AI chat
page). This rewrite is a single source of truth for anyone landing
on the repo.

Sections
--------
* What's inside       capability matrix mapping features to files
* Architecture        ASCII diagram of the full data flow + AI layer
* Chat flow walkthrough   step-by-step trace of one HYBRID question
                          end-to-end (intent -> SQL + RAG -> synth)
* Prerequisites       Python 3.10+, Java 21, winutils 3.3.6, Docker,
                       Ollama + gemma2:2b
* Quickstart          7-step happy path, copy-pasteable PowerShell
* Project layout      annotated tree of every package
* Subsystem deep-dive separate sections for the data pipeline, RAG,
                       NL2SQL (with safety table), hybrid router,
                       and the AI Chat page
* Configuration       the YAML blocks that matter
* Production design   what we did + why
* Bring-your-own data quick guide for swapping the synthetic CSV
* Cloud deployment    component-by-component cloud mapping
* Commit log          the 14-commit highlight reel

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>